Updated Chat & Find screen

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,9 +3,33 @@
     display: block;
     background-color: #fafafa;
     padding: 15px 0px;
+    margin-bottom: 5px;
+    margin-top: -10px;
 }
 #friends-display-link i {
     color: rgba(0, 0, 0, 0.3);
     margin-left: 5px;
     margin-right: 5px;
+}
+.friends-screen {
+    padding: 0px var(--horizontal-space);
+}
+.user-component__avatar--sm {
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+.user-component__title user-component__title--not-bold {
+    font-weight: 100;
+}
+.friends-screen__channel {
+    margin-top: 25px;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 15px 0px;
+}
+.friends-screen__channel-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.5);
 }
