--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -8,3 +8,25 @@
 .more-suggestions__title {
     margin: 35px 0px;
 }
+.more-suggestions__icons {
+    display: flex;
+}
+.more-suggestions__icon {
+    display: flex;
+    margin-right: 30px;
+    flex-direction: column;
+    align-items: center;
+}
+.more-suggestions__icon-image {
+    width: 60px;
+    height: 60px;
+    background-color: var(--yellow);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.more-suggestions__icon-text {
+    margin-top: 10px;
+}
