--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -16,13 +16,24 @@
     color: #2e363e;
     position: relative;
 }
-
+@keyframes notificationAnimation {
+    0% {
+        transform: none;
+    }
+    50% {
+        transform: translateY(-5px);
+    }
+    100% {
+        transform: none;
+        animation: notificationAnimation 2s ease-in-out infinite;
+    }
+}
 .nav__notification {
     position: absolute;
     left: 19px;
     top: -19px;
+    animation: notificationAnimation 2s ease-in-out infinite;
 }
-
 .nav__notifdot {
     background-color: tomato;
     width: 8px;
@@ -31,4 +42,27 @@
     position: absolute;
     left: 29px;
     top: -17px;
+}
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
+.nav__btn {
+    transform: translateY(80px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+    animation-delay: 0.5s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 1s;
+}
+.nav__btn:last-child {
+    animation-delay: 1.5s;
 }
