--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -3,7 +3,7 @@
 }
 #chat-screen {
     background-color: #abc1d1;
-    height: 11000vh;
+    height: 500vh;
 }
 #chat-screen .alt-header,
 #chat-screen .status-bar {
@@ -36,11 +36,22 @@
     display: flex;
     justify-content: end;
 }
+@keyframes fadeIn {
+    from {
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
 .main-chat {
     margin-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.3s linear;
 }
 .chat__timestamp {
     color: white;
@@ -48,4 +59,109 @@
     padding: 8px 15px;
     border-radius: 16px;
     font-size: 14px;
+    margin-bottom: 25px;
+}
+.message-row {
+    width: 100%;
+    display: flex;
+    margin-bottom: 25px;
+}
+.message-row img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.message__author {
+    opacity: 0.8;
+    font-size: 14px;
+    margin-bottom: 10px;
+    display: block;
+}
+.message__content {
+    background-color: white;
+    padding: 10px;
+    border-radius: 15px;
+    border-top-left-radius: 0px;
+    margin-right: 5px;
+}
+.message__bubble {
+    display: flex;
+    align-items: flex-end;
+}
+.message__time {
+    font-size: 14px;
+    opacity: 0.8;
+}
+.message-row--own {
+    justify-content: flex-end;
+}
+.message-row--own .message__content {
+    background-color: var(--yellow);
+    border-radius: 15px;
+    border-top-right-radius: 0px;
+    margin-left: 5px;
+    margin-right: 0px;
+}
+.message-row--own .message__bubble {
+    flex-direction: row-reverse;
+}
+.reply {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 25px;
+    box-sizing: border-box;
+}
+.reply input {
+    height: 30px;
+    width: 100%;
+    border: var(--main_border);
+    border-radius: 33px;
+    padding: 10px;
+    transition: all .3s ease-in-out;
+}
+.reply .reply__column:first-child {
+    width: 10%
+}
+.reply .reply__column:last-child {
+    width: 90%;
+    position: relative;
+}
+.reply__column:last-child > i,
+.reply__column:last-child button {
+    position: absolute;
+    right: 10px;
+    top: 9px;
+}
+.reply__column:last-child > i {
+    right: 60px;
+    top: 10px
+}
+.reply__column:last-child button {
+    color: var(--yellow);
+    border: none;
+    background-color: white;
+}
+.reply:focus-within .reply__column:first-child {
+    display: none;
+}
+.reply .fa-face-smile,
+.reply button {
+    transform: opacity 0.3s ease-in-out;
+}
+.reply:focus-within .fa-face-smile,
+.reply:focus-within button {
+    opacity: 0;
+}
+.reply:focus-within input {
+    width: 95vw;
+    transform: translateX(-3%) translateY(-80px);
+}
+.reply:focus-within {
+    transform: translateY(80px);
 }
